plugins {
    id 'java-library'
}
java {
    sourceCompatibility JavaVersion.VERSION_21
    targetCompatibility JavaVersion.VERSION_21
}


dependencies {
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation project(':JsonPort')
    testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}